--- a/styles/style.css
+++ b/styles/style.css
@@ -231,6 +231,7 @@ section {
   grid-template-columns: repeat(2, 1fr);
   padding-top: 3.5rem;
   padding-bottom: 5rem;
+  margin-bottom: 0rem;
 }
 .about-container .right-about {
   display: grid;
@@ -256,6 +257,7 @@ section {
   flex-direction: column;
 }
 .about-container .right-about .about-item .abt-text .large-text {
+  text-align: center;
   font-size: 3rem;
   font-weight: 700;
   color: var(--color-secondary);
@@ -279,6 +281,7 @@ section {
   background-color: var(--color-grey-5);
 }
 .about-container .left-about {
+  margin-right: 5rem;
   padding-right: 5rem;
 }
 .about-container .left-about p {
@@ -289,6 +292,61 @@ section {
 .about-container .left-about h4 {
   font-size: 2rem;
   text-transform: uppercase;
+}
+
+.about-stats {
+  padding-bottom: 4rem;
+}
+.about-stats .progress-bars {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 2rem;
+}
+.about-stats .progress-bars .progress-bar {
+  display: flex;
+  flex-direction: column;
+}
+.about-stats .progress-bars .progress-bar .prog-title {
+  text-transform: uppercase;
+  font-weight: 500;
+}
+.about-stats .progress-bars .progress-bar .progress-container {
+  display: flex;
+  align-items: center;
+}
+.about-stats .progress-bars .progress-bar .progress-container .prog-text {
+  color: var(--color-grey2);
+}
+.about-stats .progress-bars .progress-bar .progress-container .progress {
+  width: 100%;
+  height: 0.45rem;
+  background-color: var(--color-grey4);
+  margin-left: 1rem;
+  position: relative;
+}
+.about-stats .progress-bars .progress-bar .progress-container .progress span {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  background-color: var(--color-secondary);
+  transition: all 0.4s ease-in-out;
+  width: 60%;
+}
+.about-stats .progress-bars .progress-bar .progress-container .progress .html {
+  width: 90%;
+}
+.about-stats .progress-bars .progress-bar .progress-container .progress .css {
+  width: 95%;
+}
+.about-stats .progress-bars .progress-bar .progress-container .progress .javascript {
+  width: 80%;
+}
+.about-stats .progress-bars .progress-bar .progress-container .progress .react-native {
+  width: 30%;
+}
+.about-stats .progress-bars .progress-bar .progress-container .progress .ui-design {
+  width: 100%;
 }
 
 /* Independent Components */
