--- a/styles/style.scss
+++ b/styles/style.scss
@@ -255,6 +255,7 @@ section {
     grid-template-columns: repeat(2, 1fr);
     padding-top: 3.5rem;
     padding-bottom: 5rem;
+    margin-bottom: 0rem;
     .right-about {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
@@ -276,6 +277,7 @@ section {
                 display: flex;
                 flex-direction: column;
                 .large-text {
+                    text-align: center;
                     font-size: 3rem;
                     font-weight: 700;
                     color: var(--color-secondary);
@@ -303,6 +305,7 @@ section {
     }
 
     .left-about {
+        margin-right: 5rem;
         padding-right: 5rem;
         p {
             line-height: 2rem;
@@ -317,10 +320,66 @@ section {
     }
 }
 
+.about-stats {
+    padding-bottom: 4rem;
+    .progress-bars {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 2rem;
+        .progress-bar {
+            display: flex;
+            flex-direction: column;
+            .prog-title {
+               text-transform: uppercase;
+               font-weight: 500; 
+            }
+            .progress-container {
+                display: flex;
+                align-items: center;
+                .prog-text {
+                    color: var(--color-grey2);
+                }
+                .progress {
+                    width: 100%;
+                    height: .45rem;
+                    background-color: var(--color-grey4);
+                    margin-left: 1rem;
+                    position: relative;
+                    span {
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        height: 100%;
+                        background-color: var(--color-secondary);
+                        transition: all .4s ease-in-out;
+                        width: 60%;
+                    }
 
+                    .html {
+                        width: 90%;
+                    }
 
+                    .css {
+                        width: 95%
+                    }
 
+                    .javascript {
+                        width: 80%;
+                    }
 
+                    .react-native {
+                        width: 30%;
+                    }
+
+                    .ui-design {
+                        width: 100%;
+                    }
+                }
+
+            }
+        }
+    }
+}
 
 /* Independent Components */
 
