--- a/styles/style.css
+++ b/styles/style.css
@@ -26,6 +26,7 @@ body {
   font-size: 1.1rem;
   color: var(--color-white);
   transition: all 0.4s ease-in-out;
+  scroll-snap-type: y mandatory;
 }
 
 a {
@@ -49,6 +50,22 @@ section {
   left: 0;
   top: 0;
   padding: 3rem 18rem;
+  scroll-snap-align: start;
+}
+@media (max-width: 1500px) {
+  section {
+    padding: 3rem 5rem;
+  }
+}
+@media (max-width: 992px) {
+  section {
+    padding: 3rem 5rem;
+  }
+}
+@media (max-width: 768px) {
+  section {
+    padding: 1.5rem 2rem;
+  }
 }
 
 .section {
@@ -221,6 +238,18 @@ section {
   font-size: 6.3rem;
 }
 
+@media (max-width: 1068px) {
+  .main-title {
+    margin: 50px 0 20px 0;
+  }
+  .main-title h2 {
+    font-size: 2rem;
+  }
+  .main-title h2 .bg-text {
+    top: 50%;
+    font-size: 4rem;
+  }
+}
 .image img {
   width: 250px;
 }
@@ -241,9 +270,14 @@ section {
 .about-container .right-about .about-item {
   border: 1px solid var(--color-grey-5);
   height: 20rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   border-radius: 5px;
   transition: all 0.4s ease-in-out;
   box-shadow: 1px 2px 15px rgba(0, 0, 0, 0.1);
+  padding: 100px 0;
 }
 .about-container .right-about .about-item:hover {
   cursor: default;
@@ -255,6 +289,7 @@ section {
   padding: 1.5rem;
   display: flex;
   flex-direction: column;
+  justify-content: center;
 }
 .about-container .right-about .about-item .abt-text .large-text {
   text-align: center;
@@ -264,12 +299,12 @@ section {
   line-height: 1;
 }
 .about-container .right-about .about-item .abt-text .small-text {
-  padding-left: 3rem;
+  text-align: center;
   position: relative;
-  text-transform: uppercase;
   font-size: 1.2rem;
   color: var(--color-grey-1);
   letter-spacing: 2px;
+  margin-top: 3.5rem;
 }
 .about-container .right-about .about-item .abt-text .small-text::before {
   content: "";
@@ -284,6 +319,11 @@ section {
   margin-right: 5rem;
   padding-right: 5rem;
 }
+@media (max-width: 1068px) {
+  .about-container .left-about {
+    margin-bottom: 2rem;
+  }
+}
 .about-container .left-about p {
   line-height: 2rem;
   padding: 1rem;
@@ -294,6 +334,14 @@ section {
   text-transform: uppercase;
 }
 
+@media (max-width: 1068px) {
+  .about-container {
+    grid-template-columns: 1fr;
+  }
+  .right-about {
+    grid-template-columns: 1fr;
+  }
+}
 .about-stats {
   padding-bottom: 4rem;
 }
@@ -362,12 +410,16 @@ section {
   position: relative;
   border: 1px solid var(--color-secondary);
   display: flex;
+  justify-content: space-between;
   align-self: flex-start;
   align-items: center;
   overflow: hidden;
+  width: 200px;
+  padding: 0;
 }
 .main-btn .btn-text {
-  padding: 2 2rem;
+  z-index: 0;
+  margin: 0 0 0 15px;
 }
 .main-btn .btn-icon {
   background-color: var(--color-secondary);
