--- a/styles/style.scss
+++ b/styles/style.scss
@@ -53,7 +53,7 @@ section {
     top: 0;
     padding: 3rem 18rem;
     scroll-snap-align: start;
-    
+
     @media (max-width: 1500px) {
         padding: 3rem 5rem;
     }
@@ -294,7 +294,7 @@ section {
 
         .about-item {
             border: 1px solid var(--color-grey-5);
-            height: 20rem;
+            height: 15rem;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -316,7 +316,7 @@ section {
                 justify-content: center;
                 .large-text {
                     text-align: center;
-                    font-size: 3rem;
+                    font-size: 2rem;
                     font-weight: 700;
                     color: var(--color-secondary);
                     line-height: 1;
@@ -368,6 +368,26 @@ section {
 
     .right-about {
         grid-template-columns: 1fr;
+    }
+}
+
+/* My Skills */
+
+.stat-title {
+    text-transform: uppercase;
+    font-size: 1.4rem;
+    text-align: center;
+    padding: 3.5rem 0;
+    position: relative;
+    &::before {
+        content: '';
+        left: 50%;
+        top: 0;
+        width: 40%;
+        height: 1px;
+        background-color: var(--color-grey-5);
+        transform: translateX(-50%);
+
     }
 }
 
@@ -428,6 +448,59 @@ section {
                 }
 
             }
+        }
+    }
+}
+
+/* Timeline */
+
+.timeline {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 2rem;
+    padding-bottom: 3rem;
+    .timeline-item {
+        position: relative;
+        padding-left: 3rem;
+        border-left: 1px solid var(--color-grey-5);
+        .timeline-icon {
+            position: absolute;
+            left: -27px;
+            top: 0;
+            background-color: var(--color-secondary);
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            i {
+                font-size: 1.3rem;
+            }
+        }
+        .timeline-duration {
+            padding: .2rem .6rem;
+            background-color: var(--color-grey-5);
+            border-radius: 15px;
+            display: inline-block;
+            font-size: .8rem;
+            text-transform: uppercase;
+            font-weight: 500;
+
+        }
+        h5 {
+            padding: 1rem 0;
+            text-transform: uppercase;
+            font-size: 1.3rem;
+            font-weight: 600;
+            span {
+                color: var(--color-grey-2);
+                font-weight: 500;
+                font-size: 1.2rem;
+            }
+        }
+        p {
+            color: var(--color-grey-2);
         }
     }
 }
