--- a/styles/style.scss
+++ b/styles/style.scss
@@ -505,6 +505,33 @@ section {
     }
 }
 
+/* Portfolios */
+
+.portfolio-text {
+    padding: 2rem 0;
+    text-align: center;
+}
+
+.portfolios {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 2rem;
+    margin-top: 3rem;
+    .portfolio-item {
+        poisition: relative;
+        img {
+            width: 100%;
+            height: 300px;
+            object-fit: contain;
+            border-radius: 15px;
+        }
+        .hover-items {
+            
+        }
+        }
+    }
+}
+
 /* Independent Components */
 
 .btn-con {
