--- a/styles/style.scss
+++ b/styles/style.scss
@@ -86,13 +86,13 @@ section {
 .sect2 {
     display: none;
     transform: translateY(0) scale(1);
-    background-color: slateblue;
+    background-color: rgb(0, 0, 0);
 }
 
 .sect3 {
     display: none;
     transform: translateY(0) scale(1);
-    background-color: rgb(146, 205, 90);   
+    background-color: rgb(0, 0, 0);   
 }
 
 .sect4 {
@@ -381,6 +381,7 @@ section {
     position: relative;
     &::before {
         content: '';
+        position: absolute;
         left: 50%;
         top: 0;
         width: 40%;
@@ -518,19 +519,76 @@ section {
     grid-gap: 2rem;
     margin-top: 3rem;
     .portfolio-item {
-        poisition: relative;
+        position: relative;
+        border-radius: 15px;
         img {
             width: 100%;
             height: 300px;
-            object-fit: contain;
+            object-fit: cover;
             border-radius: 15px;
         }
         .hover-items {
-            
-        }
+            width: 100%;
+            height: 100%;
+            background-color: var(--color-secondary);
+            position: absolute;
+            left: 0;
+            top: 0;
+            border-radius: 15px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            opacity: 0;
+            transform: scale(0);
+            transition: all .4s ease-in-out;
+            h3 {
+                font-size: 1.5rem;
+                color: var(--color-white);
+                margin-bottom: 1.5rem;
+            }
+            p {
+                text-align: center;
+            }
+            .icons {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                margin: 10px 0;
+                .icon {
+                    background-color: var(--color-primary);
+                    border-radius: 50%;
+                    width: 50px;
+                    height: 50px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    margin: 0 1rem;
+                    cursor: pointer;
+                    transition: all .4s ease-in-out
+                    i {
+                        font-size: 1.5rem;
+                        color: var(--color-white);
+                        margin: 0 1rem;
+                    }
+                    &:hover {
+                        background-color: var(--color-white);
+                        i {
+                            color: var(--color-primary);
+                        }
+                    }
+                }
+            }    
         }
     }
 }
+
+.portfolio-item:hover .hover-items {
+    opacity: 1;
+    transform: scale(1);
+}
+
+
 
 /* Independent Components */
 
@@ -586,7 +644,3 @@ section {
     }
 
 }
-
-
-
-
