--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,7 @@
 }
 
 :root {
-  --color-primary: #191d2b;
+  --color-primary: #000000;
   --color-secondary: #27AE60;
   --color-white: #FFFFFF;
   --color-black: #000;
@@ -77,6 +77,7 @@ section {
 .sect1 {
   display: none;
   transform: translateY(0) scale(1);
+  background-color: rgba(0, 0, 0, 0.849);
 }
 
 .sect2 {
@@ -478,6 +479,11 @@ section {
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 2rem;
   margin-top: 3rem;
+}
+@media (max-width: 955px) {
+  .portfolios {
+    grid-template-columns: 1fr;
+  }
 }
 .portfolios .portfolio-item {
   position: relative;
